Added basic html tags for the blog and implemented the initalize function in the controller

--- a/client/styles/style.css
+++ b/client/styles/style.css
@@ -34,3 +34,9 @@ TMLJSCSSDIALOG1.TMPL.HTMLTABDIALOG.TMPL.HTMLHTMLJSCSSDIALOG1.TMPL.HTMLTABDIALOG.
 .myPasswordInput {
   width: 80%;
 }
+.blog {
+  width: 80%;
+}
+.blogInfo {
+  width: 90%;
+}
