--- a/client/styles/style.css
+++ b/client/styles/style.css
@@ -40,3 +40,23 @@ TMLJSCSSDIALOG1.TMPL.HTMLTABDIALOG.TMPL.HTMLHTMLJSCSSDIALOG1.TMPL.HTMLTABDIALOG.
 .blogInfo {
   width: 90%;
 }
+.st_thumbs{
+    height: 0;
+    margin: 0;
+}
+.st_thumbs img{
+    float:left;
+    margin:3px  3px 0px 0px;
+    cursor:pointer;
+  -moz-box-shadow:1px 1px 5px #000;
+  -webkit-box-shadow:1px 1px 5px #000;
+  box-shadow:1px 1px 5px #000;
+  opacity:0.7;
+  filter:progid:DXImageTransform.Microsoft.Alpha(opacity=70);
+}
+.st_thumbs img:hover{
+  opacity:1;
+}
+.st_thumbs_wrapper {
+  height: 10%;
+}
