--- a/client/styles/style.css
+++ b/client/styles/style.css
@@ -370,6 +370,7 @@ filter:progid:DXImageTransform.Microsoft.Alpha(opacity=70);
   margin-top: 14%;
 }
 
+/*
 body,html {
   height: 100%;
 }
@@ -377,7 +378,7 @@ body,html {
 body {
   padding-top: 50px;
 }
-
+*/
 .wide {
   
   height:calc(100% - 1px);
